<resources>
    <string name="app_name">Doska Ykt</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="my_ads">Мои объявления</string>
    <string name="cars_ads">Машины</string>
    <string name="cloth_ads">Одежда</string>
    <string name="pc_ads">Компьютеры</string>
    <string name="smartphone_ads">Смартфоны</string>
    <string name="dm_ads">Бытовая техника</string>
    <string name="services_ads">Услуги</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="account">Аккаунт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_or_sign_up">Войдите или зарегистрируйтесь</string>
    <!-- EditActivity -->
    <string name="ed_ac_title">Название</string>
    <string name="ed_ac_price">Цена</string>
    <string name="ed_ac_description">Описание</string>
    <string name="ed_ac_tel">Телефон</string>

    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>

    <!-- MainActivity -->
    <string name="delete_title">Удалить объявление?</string>
    <string name="delete_message">Вы действительно хотите удалить объявление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="item_deleted">Объявление удалилось успешно</string>

    <!-- ShowActivity -->
    <string name="price">Цена:</string>
    <string name="tel">Телефон:</string>
    
    <!-- ChooseImageActivity -->
    <string name="main_image">Главное фото</string>
    <string name="image2">Фото 2</string>
    <string name="image3">Фото 3</string>

</resources>